# openenv-email-triage

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  baseline_results.json  config_loader.py  deploy.ps1  inference.py  mock_inference.py  openenv.yaml  pyproject.toml  requirements.txt  token.txt.template  verify_env.py
env/: __init__.py  environment.py  graders.py  models.py  tasks.py
server/: app.py
